# tracking

./: CMakeLists.txt  README.md  toyTrouble.cpp  tracking.cpp
include/: ArcDetector.hpp  CSVReader.hpp  DataReader.hpp  Grid.hpp  KalmanFilter.hpp  LidarScan.hpp  Object.hpp  ObjectDetector.hpp  Point.hpp  Track.hpp  Tracker.hpp  constants.hpp  lidarScan.hpp
results/: outputTurning.csv  output_straight.csv  plotTrack.m
src/: ArcDetector.cpp  CSVReader.cpp  Grid.cpp  KalmanFilter.cpp  Tracker.cpp
